@@ -11,9 +11,6 @@
 .*
 !.gitignore
 
-
-/src/main/resources
-
 # /src/main/antlr/cosmas/
 /src/main/antlr/cosmas/c2ps_regex.g
 
